@@ -34,13 +34,13 @@ function(x, ...) {
 
 # mode argument is ignored as mode=mode gave an error on R-devel
 setMethod('as.vector', signature(x='Extent'), 
-function(x, mode) {
-	c(x@xmin, x@xmax, x@ymin, x@ymax)
+function(x, mode='any') {
+	as.vector(c(x@xmin, x@xmax, x@ymin, x@ymax))
 })
 
 
 setMethod('as.vector', signature(x='Raster'), 
-function(x, mode) {
+function(x, mode='any') {
 	as.vector(getValues(x))
 })
 
