@@ -12,9 +12,10 @@ Fix lines falling between the cracks in extract (calling rasterzeLines): https:/
 allow setting a 'spatial window'
 
 --- current version
-Major bug fixes:
+Big fixes:
 The order of the layers returned by stackApply was only as expected of the indices were sorted from 1 to n. Reported by Mark Payne
-fixed in version 2.5-1
+rasterize(..., getCover=TRUE) again did not work properly. Reported by Pascal Title
+as.vector gave trouble on different version (R-devel vs. R-current). Work around implemented.
 
 --- 10-December-2015, version: 2.4-30
 package ncdf is now obsolete and no longer supported (use ncdf4 instead)
